--- a/templates/user_temp/user_about.html
+++ b/templates/user_temp/user_about.html
@@ -11,69 +11,32 @@
         </div>
       </div>
     </section>
-
-    <section class="about spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                    <div class="about__item">
-                        <h4>Who We Are ?</h4>
-                        <p>Contextual advertising programs sometimes have strict policies that need to be adhered too.
-                        Let's take Google as an example.</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                    <div class="about__item">
-                        <h4>Who We Do ?</h4>
-                        <p>In this digital generation where information can be easily obtained within seconds, business
-                        cards still have retained their importance.</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                    <div class="about__item">
-                        <h4>Why Choose Us</h4>
-                        <p>A two or three storey house is the ideal way to maximise the piece of earth on which our home
-                        sits, but for older or infirm people.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="section block-banner-street"> 
+      <section class="section block-our-shop">
         <div class="container"> 
-          <div class="box-banner-street">
-            <h1 class="text-68 mb-10">Soccer is more than a sport</h1>
-            <p class="text-24 mb-30">it's a universal language of passion, teamwork, and dreams.</p><a class="btn btn-white" href="/user_shop">Shop Now</a>
+          <div class="text-center wow bounceIn"> 
+            <p class="text-17-medium text-uppercase mb-15 primary-navy">our shop</p>
+            <h3 class="mb-15">Focusing on Quality <br class="d-none d-lg-block">Material, Good Design</h3>
+            <div class="box-slide-customers">
+              <p class="body-p2 neutral-medium-dark">
+                Dominate the pitch with our Pro-Performance Football Boots, engineered to unleash your full potential on the field. These high-performance boots are designed to provide superior control, agility, and comfort, helping you take your football game to the next level.
+              </p>
+          </div>
+          <div class="row mt-60 wow bounceIn"> 
+            <div class="col-lg-6"><img src="{% static 'img/hero/about-1.jpg' %}" alt="voxy"></div>
+            <div class="col-lg-6"><img src="{% static 'img/hero/about-2.jpg' %}" alt="voxy"></div>
           </div>
         </div>
-    </section>
-    <section class="testimonial">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-6 p-0">
-                    <div class="testimonial__text">
-                        <span class="icon_quotations"></span>
-                        <p>I've always tried to stay true to myself and my values, whether it's on the field or off it. When I partner with a brand, it's essential for me that there's a genuine connection and shared values</p>
-                        <div class="testimonial__author">
-                            <div class="testimonial__author__pic">
-                                <img src="{% static 'img/about/testimonial-author.jpg' %}" alt="">
-                            </div>
-                            <div class="testimonial__author__text">
-                                <h5>LIONEL MESSI</h5>
-                                <p>Professional Football Player</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 p-0">
-                    <div class="testimonial__pic set-bg" data-setbg="{% static 'img/about/testimonial-pic.jpg' %}"></div>
-                </div>
-            </div>
+      </section>
+      <section class="section block-icon-box"> 
+        <div class="container"> 
+          <div class="text-center"> 
+            <h6 class="text-17-medium primary-navy text-uppercase mb-15 wow fadeInLeft">Our quality promise</h6>
+            <h3 class="mb-65 wow fadeInRight">We Developed Products We Need</h3>
+            <p class="body-p2 neutral-medium-dark">
+                Elevate your style and comfort with our Classic Leather Ankle Boots. These versatile boots are the perfect blend of fashion and function, designed to make a statement while keeping your feet cozy in any season. Crafted with care and attention to detail, these boots are a must-have addition to your footwear collection.
+            </p>          
         </div>
-    </section>
-    
+      </section>
   </main>
-
-    
 
 {% endblock body %}
