--- a/templates/user_temp/user_login.html
+++ b/templates/user_temp/user_login.html
@@ -61,20 +61,19 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="{% static 'img/banner/banner-1.jpg' %}" class="d-block w-100" alt="...">
+                        <img src="{% static 'img/hero/banner-1.jpg' %}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>WIDE RANGE OF BOOTS</h5>
-                          {% comment %} <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p> {% endcomment %}
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="{% static 'img/banner/banner-2.jpg' %}" class="d-block w-100" alt="...">
+                        <img src="{% static 'img/hero/banner-2.jpg' %}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>FOOTBALLS</h5>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="{% static 'img/banner/banner-3.jpg' %}" class="d-block w-100" alt="...">
+                        <img src="{% static 'img/hero/banner-3.jpg' %}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>GOLVES</h5>
                         </div>
