--- a/templates/user_temp/user_order.html
+++ b/templates/user_temp/user_order.html
@@ -50,7 +50,7 @@
               </div>
               <div class="wizard">
                 <nav class="list-group list-group-flush">
-                    <a class="list-group-item " href="user_profile"><i class="fe-icon-user text-muted"></i>Profile Settings</a>
+                    <a class="list-group-item " href="user_profile"><i class="fe-icon-user text-muted"></i>Profile</a>
                     <a class="list-group-item " href="user_address"><i class="fe-icon-user text-muted"></i>Address</a>
                     <a class="list-group-item active " href="#"><i class="fe-icon-user text-muted"></i>Order details</a>
                     <a class="list-group-item " href="/user_change_password"><i class="fe-icon-user text-muted"></i>Change Password</a>
