--- a/templates/user_temp/user_cart.html
+++ b/templates/user_temp/user_cart.html
@@ -44,7 +44,6 @@
                     <div class="list-items-cart">
                         {% for cart_item in cart_items %}
                             <div class="item-cart">
-                            
                                 <div class="item-cart-image"><img src="{{ cart_item.product.product_images.url }}" alt="Guza"></div>
                                 <div class="item-cart-info">
                                 <div class="item-cart-info-1"><a class="text-16-medium" href="{{ cart_item.product.get_url}}">{{cart_item.product.product_name}}</a>
@@ -55,7 +54,8 @@
                                     <div class="box-info-size-color-product">
                                         {% if cart_item.variations.all %}
                                             {% for item in cart_item.variations.all %}
-                                                <p class="box-color"><span class="body-p2 neutral-medium-dark">{{ item.variation_category | capfirst }}:</span><span class="body-p2 neutral-dark">{{ item.variation_value | capfirst }} </span></p>
+                                                <p class="box-color"><span class="body-p2 neutral-medium-dark">{{ item.variation_category | capfirst }}:</span>
+                                                    <span class="body-p2 neutral-dark">{{ item.variation_value | capfirst }} </span></p>
                                             {% endfor %}
                                             <br>
                                         {% endif %}
@@ -68,62 +68,52 @@
                                     </div>
                                     <div class="box-form-cart">
                                         <div class="row">
-                                            <div class="col">
-                                                <div class="input-group-prepend">
-                                                    <a href="{% url 'user_remove_cart' cart_item.product.id cart_item.id %}" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-minus"></i> </a>
-                                                </div>
+                                            <div class="col-3">
+                                                    <a href="{% url 'user_remove_cart' cart_item.product.id cart_item.id %}" class="btn btn-light bg-white border-0" type="button" id="button-minus"> <i class="fa fa-minus"></i> </a>
                                             </div>
 
-                                            <div class="col">
-                                                <input type="text" class="qty-val form-control" name="quantity" value="{{ cart_item.quantity }}">
+                                            <div class="col-3 ">
+                                                <input type="text" class="qty-val form-control bg-white " name="quantity" value="{{ cart_item.quantity }}">
                                             </div>
 
-                                            <div class="col">
-                                                <div class="input-group-append">
-                                                    <form action="{% url 'user_add_cart' cart_item.product.id %}" method="POST">
-                                                        {% csrf_token %}
-                                                            {% for item in cart_item.variations.all  %}
-                                                            <input type="hidden" name="{{item.variation_category| lower }}" value="{{item.variation_value | capfirst}}">
-                                                            {% endfor %}
-                                                        <button  class="btn btn-light"  type="submit" id="button-plus"> <i class="fa fa-plus"></i> </button>
-                                                    </form>
-                                                </div>                                        
+                                            <div class="col-2 p-0">
+                                                <form action="{% url 'user_add_cart' cart_item.product.id %}" method="POST">
+                                                    {% csrf_token %}
+                                                        {% for item in cart_item.variations.all  %}
+                                                        <input type="hidden" name="{{item.variation_category| lower }}" value="{{item.variation_value | capfirst}}">
+                                                        {% endfor %}
+                                                    <button  class="btn btn-light bg-white border-0"  type="submit" id="button-plus"> <i class="fa fa-plus"></i> </button>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item-cart-info-2">
-                                    <p class="body-p2"></p>
-                                </div>
-                                <div class="item-cart-info-2">
-                                    <p class="body-p2">&#8377;&nbsp;{{cart_item.sub_total}}</p><a  href="{% url 'user_remove_cart_item' cart_item.product.id cart_item.id %}" data-product-id="{{ cart_item.product.id }}" data-cart-item-id="{{ cart_item.id }}" class="btn-remove-cart"></a>
+                                    <p class="body-p2"></p><a  href="{% url 'user_remove_cart_item' cart_item.product.id cart_item.id %}" data-product-id="{{ cart_item.product.id }}" data-cart-item-id="{{ cart_item.id }}" class="btn-remove-cart"></a>
                                 </div>
                                 </div>
-                            
                             </div>
+                            <div class="item-cart-info-2" >
+                            <p class="body-p2"  style="text-align: right;">Total:&#8377;&nbsp;{{cart_item.sub_total}}</p>
+                            </div>
+                            <hr>
                         {% endfor %}
-                        <div class="box-coupon">
-                                
-                            <div class="coupon-left">
-                                <form method="post" action="{% url 'user_apply_coupon' %}" id="couponForm">
-                                    {% csrf_token %}
-                                    <div class="form-inline">
-                                        <div class="form-group">
-                                            <input class="form-control input-coupon" type="text" id="couponInput" name="coupon_code" placeholder="Coupon code" data-toggle="modal" data-target="#couponModal">
-                                        </div>
-                                        <button type="submit" class="btn btn-border">Apply</button>
-                                    </div>
-                                </form>
-                            </div>
-                            
-                            <div class="coupon-right" style="padding-right: 5px;"><a class="btn btn-border" href="/user_shop">Update Cart</a></div>
-                            <div ><a class="btn btn-border" href="/user_wishlist">Wishlist</a></div>
-                        </div>
-                        {% if applied_coupon_code %}
-                                <div class="coupon-applied">
-                                    <p>Coupon Applied: {{ applied_coupon_code }} - {{ applied_coupon_discount }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="?remove_coupon=1"><i class="fa fa-close"></i></a></p>
+                        <form method="post" action="{% url 'user_apply_coupon' %}" id="couponForm">
+                            {% csrf_token %}
+                            <div class="box-coupon">
+                                <div class="coupon-left">
+                                    {% if applied_coupon_code %}
+                                        <input class="form-control input-coupon" type="text" id="couponInput" name="coupon_code" placeholder="Coupon Applied: {{ applied_coupon_code }} - {{ applied_coupon_discount }}" data-toggle="modal" data-target="#couponModal">
+                                        <a class="btn btn-border"  href="?remove_coupon=1">Remove</a>
+                                    {% else %}
+                                    <input class="form-control input-coupon" type="text" id="couponInput" name="coupon_code" placeholder="Coupon code" data-toggle="modal" data-target="#couponModal">
+                                    <button type="submit" class="btn btn-border">Apply</button>
+                                    {% endif %}
+                                    
                                 </div>
-                        {% endif %}
+                                <div class="coupon-right" ><a class="btn btn-border" href="/user_shop">Update Cart</a></div>
+                            </div>
+                        </form>
                         <br>
                         <br>
                         <!-- Bootstrap Modal -->
@@ -164,18 +154,18 @@
                         <h5 class="neutral-dark">&#8377;&nbsp;{{total}}</h5>
                         </div>
                         <div class="box-info-cart-inner">
-                            <div class="cart__total" style="background-color: transparent;">
-                                <ul>
-                                    <li>Subtotal <span>&#8377;&nbsp;{{total}}</span></li>
-                                    {% if applied_coupon_code %}
-                                    <li>Discount <span>-&nbsp;&nbsp;&#8377;&nbsp;{{applied_coupon_discount}}</span></li>
-                                    {% endif %}
-                                    <li>Total <span>&#8377;&nbsp;{{grand_total}}</span></li>
-                                </ul>
+                            {% if applied_coupon_code %}
+                            <div class="d-flex align-items-center justify-content-between box-border-bottom">
+                                <h5 class="neutral-medium-dark">Discount</h5>
+                                <h5 class="color-9">-&nbsp;&nbsp;&#8377;&nbsp;{{applied_coupon_discount}}</h5>
                             </div>
+                            {% endif %}
+                              <div class="d-flex align-items-center justify-content-between box-border-bottom">
+                                <h5 class="neutral-medium-dark">Total</h5>
+                                <h5 class="color-9">&#8377;&nbsp;{{grand_total}}</h5>
+                              </div>
                         </div>
                         <div class="box-button-cart"><a class="btn btn-black" href="/user_shipping">Proceed To Shipping</a></div>
-                        {% comment %} <div class="box-other-link"><a class="text-17 link-green" href="#">Free shipping on orders over $200.00</a><a class="text-17" href="#">Continue Shopping</a></div> {% endcomment %}
                     </div>
                 </div>
             {% endif %}
@@ -275,8 +265,6 @@
         // Get the value of the input field
         var couponCode = document.getElementById('couponInput').value;
         
-        // You can now use the 'couponCode' variable to do something with the input value
-        // For example, you can send it via AJAX or perform other operations
         console.log('Coupon Code:', couponCode);
         
         // Now, you can submit the form if needed
