--- a/templates/user_temp/user_order_confirmed.html
+++ b/templates/user_temp/user_order_confirmed.html
@@ -12,23 +12,17 @@
 		<a href="{% url 'user_shop' %}" class="btn btn-success">Shop more</a>
 	</div>
 </div>
-
-<div class="container" style="margin: 0 auto;width: 50%;padding: 50px;background: #f1f1f1;margin-top: 50px;margin-bottom: 50px;">
+<div class="container mt-5  invoice-container"  >
+    <main class="main-wrap" style="margin-top: 100px; margin-bottom: 100px">
     <div class="row invoice row-printable">
         <div class="col-md-12">
-            <!-- col-lg-12 start here -->
             <div class="panel panel-default plain" id="dash_0">
-                <!-- Start .panel -->
                 <div class="panel-body p30">
                     <div class="row">
-                        <!-- Start .row -->
                         <div class="col-lg-12">
-                            <!-- col-lg-6 start here -->
-                            <div class="invoice-logo"><img src="{% static 'img/icon/invoice.png' %}" alt="Invoice logo" style="max-height: 40px;"></div>
+                            <li><strong>Voxy Invoice</strong></li>
                         </div>
-                        <!-- col-lg-6 end here -->
                         <div class="col-lg-12">
-                            <!-- col-lg-6 start here -->
                             <div class="invoice-from">
                                 <ul class="list-unstyled text-right">
                                     <li><strong>Invoiced To</strong></li>
@@ -39,9 +33,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <!-- col-lg-6 end here -->
                         <div class="col-lg-12">
-                            <!-- col-lg-12 start here -->
                             <div class="invoice-details mt25">
                                 <div class="well">
                                     <ul class="list-unstyled mb0">
@@ -81,7 +73,7 @@
                                                 <th class="text-center">&#8377;&nbsp;{{ order.order_total }}</th>
                                             </tr>
                                             <tr>
-                                                <th colspan="2" class="text-right">Tax:</th>
+                                                <th colspan="2" class="text-right">Shipping:</th>
                                                 <th class="text-center">&#8377;&nbsp;0</th>
                                             </tr>
                                             
@@ -97,16 +89,12 @@
                                 <p class="text-center">Thank you for shopping with us!</p>
                             </div>
                         </div>
-                        <!-- col-lg-12 end here -->
                     </div>
-                    <!-- End .row -->
                 </div>
             </div>
-            <!-- End .panel -->
         </div>
-        <!-- col-lg-12 end here -->
+    </div>
     </div>
 </div>
-
 
 {% endblock %}
